# docs-cockpit

./: .docs-cockpit.bundle  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  docs-cockpit.yaml  push.ps1  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: deploy-site.yml  test.yml
commands/: browse.md  build.md  lint.md  migrate.md  render.md  status.md  update.md  weekly.md
docs/: HEALTH.md  bundle-meta.js
docs/plans/: P-skill-first-pivot.md  P-v0.11-ai-augmented-precision-alpha7-2026-05-18.md  P-v0.11-driver-seat.md  P-v0.11-remaining-backlog-2026-05-18.md  P-v0.11-test-plan.md  P-v0.11-ui-split-view-alpha6-2026-05-18.md  P-v0.13-polish-and-edges.md  P-v0.14-batch-driver.md  P-v0.16-doc-language-and-subtask-plans.md  P-v0.19-agile-version-planning.md  P-v1.0-stage-a-build-rebuild.md  P-v1.0-stage-b-cli-slim.md  P-v1.0-stage-c-release.md  P-v1.1-health-check.md  P-v1.1-health-impl.md  V0.18-mcp-build-and-body-patch.md  V0.19-agile-version-planning.md
docs/refine/: M01.md  M02.md  M03.md  M04.md  M05.md  M06.md  M07.md  M08.md  M09.md  M10.md  M11.md  M12.md  M13.md  M14.md  M15.md  M16.md  M17.md  README.md
docs/spec/module/: M01-build-engine.md  M02-cli.md  M03-plugin.md  M04-author-skill.md  M05-portfolio.md  M06-browse-reader.md  M07-mcp-server.md  M08-apply-patch.md  M09-sync-status.md  M10-llm-doc-optimizer.md  M11-schema-consistency.md  M12-parser-robustness.md  M13-from-browser.md  M14-css-audit-and-polish.md  M15-backlog-view-filters.md  M16-multi-subtask-bundle-ux.md  M17-bundle-prompt-and-skill.md
docs/superpowers/plans/: 2026-06-12-codex-plugin-marketplace.md  2026-06-12-readme-marketing-brand-refresh.md
docs/superpowers/specs/: 2026-06-12-codex-plugin-marketplace-design.md  2026-06-12-readme-marketing-brand-refresh-design.md
docs_cockpit/: __init__.py  __main__.py  apply_patch.py  body_patch.py  browse.py  browser_storage.py  build.py  bundle.py  cli.py  mcp_server.py  migrate.py  paths.py  portfolio.py  prompt.py  schema.py  sprint.py  suggest.py  sync_status.py  upgrade.py  verify.py
docs_cockpit/examples/: full.yaml  minimal.yaml
docs_cockpit/templates/: browse.html.tmpl  index.html.tmpl  sprint-plan.md.j2
docs_cockpit/templates/prompts/: _caller_aware_sync.md.j2  bundle.md.j2  feature.md.j2  fix.md.j2  generic.md.j2  refactor.md.j2  refine.md.j2  verify.md.j2
docs_cockpit/templates/suggest/: anchor-completeness.md.j2  bundle-recommendation.md.j2  cross-doc-consistency.md.j2  desc-rewrite.md.j2  subtask-recompose.md.j2
evals/: index.html  review.html  trigger-eval.json
examples/: full.yaml  minimal.yaml  sourcery.yaml
marketing/: xhs-drafts.md  xhs-final.md  xhs-v2-drafts.md
plugins/docs-cockpit/: README.md  README.zh-CN.md
plugins/docs-cockpit/.codex-plugin/: plugin.json
plugins/docs-cockpit/commands/: browse.md  migrate.md  render.md
plugins/docs-cockpit/hooks/: session-start
plugins/docs-cockpit/references/: association-method.md  frontmatter_conventions.md  operations.md
plugins/docs-cockpit/skills/docs-cockpit-build/: SKILL.md
plugins/docs-cockpit/skills/docs-cockpit-rebuild/: SKILL.md
plugins/docs-cockpit/skills/use-docs-cockpit/: SKILL.md
references/: config_reference.md  design_tokens.md  frontmatter_conventions.md  health-check.md  mcp_clients.md  operations.md  schema.md  sync_status_workflow.md
site/: index.html
skills/docs-cockpit/: SKILL.md
skills/docs-cockpit-author/: SKILL.md
skills/docs-cockpit-build/: SKILL.md
skills/docs-cockpit-portfolio/: SKILL.md
skills/docs-cockpit-rebuild/: SKILL.md
skills/docs-cockpit-standup/: SKILL.md
skills/docs-cockpit-status/: SKILL.md
skills/docs-cockpit-update/: SKILL.md
skills/use-docs-cockpit/: SKILL.md
tests/: conftest.py
tests/integration/: test_cli_v011.py  test_dashboard_render.py  test_health_render.py  test_mcp_server.py
tests/unit/: test_aliases.py  test_apply_patch.py  test_browser_storage.py  test_bundle.py  test_codex_marketplace.py  test_doc_language.py  test_paths.py  test_schema.py  test_suggest.py  test_sync_status.py  test_systemdocs_embed.py
