[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-cockpit"
version = "0.1.0"
description = "Aggregate a project's Markdown into a single-file HTML cockpit (sidebar + kanban dashboard)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Harvey" }
]
keywords = ["docs", "dashboard", "markdown", "static-site", "project-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
docs-cockpit = "docs_cockpit.build:main"

[project.urls]
Homepage = "https://github.com/harvey/docs-cockpit"
Repository = "https://github.com/harvey/docs-cockpit"

[tool.setuptools.packages.find]
include = ["docs_cockpit*"]

[tool.setuptools.package-data]
docs_cockpit = ["templates/*.tmpl"]
