[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-cockpit"
dynamic = ["version"]
description = "Single-file project module/sprint/progress dashboard (Kanban + Sprint + KPI) from YAML frontmatter. Ships as a Claude Code plugin."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Guohao1020" }
]
keywords = [
  "claude-code",
  "claude-code-plugin",
  "claude-skill",
  "dashboard",
  "kanban",
  "sprint-tracking",
  "project-management",
  "yaml",
  "frontmatter",
  "markdown",
  "single-file-html",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
docs-cockpit = "docs_cockpit.build:main"

[project.urls]
Homepage = "https://github.com/Guohao1020/docs-cockpit"
Repository = "https://github.com/Guohao1020/docs-cockpit"
Issues = "https://github.com/Guohao1020/docs-cockpit/issues"
Changelog = "https://github.com/Guohao1020/docs-cockpit/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "docs_cockpit.__version__" }

[tool.setuptools.packages.find]
include = ["docs_cockpit*"]

[tool.setuptools.package-data]
docs_cockpit = [
  "templates/*.tmpl",
  "examples/*.yaml",
]
