[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-cockpit"
dynamic = ["version"]
description = "Single-file project module/sprint/progress dashboard (Kanban + Sprint + KPI) from YAML frontmatter. Ships as a Claude Code plugin."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Guohao1020" }
]
keywords = [
  "claude-code",
  "claude-code-plugin",
  "claude-skill",
  "dashboard",
  "kanban",
  "sprint-tracking",
  "project-management",
  "yaml",
  "frontmatter",
  "markdown",
  "single-file-html",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "pyyaml>=6.0",
  # 0.11.0-alpha.3:W3 prompt scaffolding · plan §6.2
  # SandboxedEnvironment + ChoiceLoader + 4 个内置 templates
  "jinja2>=3.1",
]

# 0.11.0-alpha.1:测试 / 类型检查 dev dep · plan §11 Step 1 + plan-eng-review 4A
# 装法:`pip install -e .[dev]` 或 `uv pip install -e .[dev]`
[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  # playwright 留给 Step 2 UI split-view 引入 · 当前 Step 1 单元 + 集成测试只用 pytest
]

[project.scripts]
docs-cockpit = "docs_cockpit.build:main"

# 0.11.0-alpha.1:pytest 配置 · 默认走 tests/ 目录 · 不递归扫 docs_cockpit/examples/
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: end-to-end tests · run a full docs-cockpit render against fixture project",
]

[project.urls]
Homepage = "https://github.com/Guohao1020/docs-cockpit"
Repository = "https://github.com/Guohao1020/docs-cockpit"
Issues = "https://github.com/Guohao1020/docs-cockpit/issues"
Changelog = "https://github.com/Guohao1020/docs-cockpit/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "docs_cockpit.__version__" }

[tool.setuptools.packages.find]
include = ["docs_cockpit*"]

[tool.setuptools.package-data]
docs_cockpit = [
  "templates/*.tmpl",
  "templates/*.html",
  "templates/prompts/*.j2",
  "examples/*.yaml",
]
